--- a/Specification/main.tex
+++ b/Specification/main.tex
@@ -50,6 +50,8 @@
 \section{Példa}
 Teszt szöveg.\cite{wikipedia}
 
+\include{sections/definitons}
+
 %--------------------------------------------------------------------------------------
 % Bibliográfia [Bibliography] - Ha üres kommenteld ki [Uncomment if empty]
 %--------------------------------------------------------------------------------------
