--- a/Specification/titlepage.tex
+++ b/Specification/titlepage.tex
@@ -1,4 +1,4 @@
-\author{\textit{Készítették:}\\ Buczny Dominik \hspace{5pt} Hanich Péter \\ Németh Gergő Olivér \hspace{5pt} Olchváry Ambrus Balázs \\[10pt] \textit{Konzulens:}\\ Gazdi László}
+\author{\textit{Készítették:}\\ Buczny Dominik \hspace{5pt} Hanich Péter \\ Németh Gergő Olivér \hspace{5pt} Olchváry Ambrus \\[10pt] \textit{Konzulens:}\\ Gazdi László}
 \title{Szoftverarchitektúrák Házi Feladat \\ Író-olvasó oldal \\ \textbf{Specifikáció}}
 \date{2024/2025/1}
 \maketitle
