Add technologies and team info

--- a/Specification/sections/definitions.tex
+++ b/Specification/sections/definitions.tex
@@ -15,7 +15,7 @@ A műveket saját szerzőik és a moderátorok opcionálisan tulajdonságokkal l
 
 \begin{itemize}
 \item \emph{Kategória:} Leírja a mű műfaját vagy típusát.
-Előre definiált kategóriák vannak amiket a felhasználók használhatnak
+Előre definiált kategóriák vannak amiket a felhasználók használhatnak.
 Kategóriát moderátor hozhat létre, módosíthat, törölhet
 \item \emph{Címkék:} Kulcsszavak, amik további információt adnak a műről.
 Bárki hozhat létre új jellemzőt, vagy használhat egy már meglévőt
