--- a/Specification/sections/description.tex
+++ b/Specification/sections/description.tex
@@ -12,17 +12,16 @@ A csapat tagjai:
         \textbf{Csapattag neve} & \textbf{Neptun-kódja} & \textbf{E-mail címe}
         & \textbf{Általános feladatköre} \\
         \hline\hline
-        Buczny Dominik & C84AVJ & bucznydominik@gmail.com
+        Buczny Dominik & C84AVJ & \href{mailto:bucznydominik@gmail.com}{bucznydominik@gmail.com}
         & webes frontend \\
         \hline
-        Hanich Péter & x & x
-        & yyy \\ %TODO
+        Hanich Péter & A1FVB8 & \href{mailto:hanipet@gmail.com}{hanipet@gmail.com}
+        & backend és adatbázis \\ %TODO
         \hline
-        Németh Gergő Olivér & x & x
-        & yyy \\ %TODO
+        Németh Gergő Olivér & PIBK75 & \href{mailto:nemeth.n.gergo@gmail.com}{nemeth.n.gergo@gmail.com}
+        & mobil kliens \\ %TODO
         \hline
-        Olchváry Ambrus & x & x
-        & yyy \\ %TODO
+        Olchváry Ambrus & AZLFR2 & \href{mailto:ambrus.olchvary@gmail.com}{ambrus.olchvary@gmail.com} & backend és adatbázis \\ %TODO
         \hline
     \end{tabular}
 \end{table}
@@ -33,4 +32,4 @@ A csapat tagjai:
 
 \subsection{Technikai paraméterek}
 
-%TODO
+Az alkalmazás egy webes és egy mobilos kliensből áll, valamint egy backendből és az általa használt adatbázisból. A webes kliens  React keretrendszerre épül, a mobilos kliens pedig natív Androidra készül. A backend a Laravel keretrendszerrel készül, az adatbázis pedig valamilyen SQL alapú relációs adatbázis lesz. A könyebb telepítés és futtatás érdekében Docker konténereket használunk.
