--- a/Specification/titlepage.tex
+++ b/Specification/titlepage.tex
@@ -1,5 +1,5 @@
 \author{\textit{Készítették:}\\ Buczny Dominik \hspace{5pt} Hanich Péter \\ Németh Gergő Olivér \hspace{5pt} Olchváry Ambrus \\[10pt] \textit{Konzulens:}\\ Gazdi László}
-\title{Szoftverarchitektúrák Házi Feladat \\ Író-olvasó oldal \\ \textbf{Specifikáció}}
+\title{Szoftverarchitektúrák Házi Feladat \\ Közösségi író-olvasó oldal \\ \textbf{Specifikáció}}
 \date{2024/2025/1}
 \maketitle
 \thispagestyle{empty}
