--- a/Specification/sections/description.tex
+++ b/Specification/sections/description.tex
@@ -32,4 +32,4 @@ A csapat tagjai:
 
 \subsection{Technikai paraméterek}
 
-Az alkalmazás egy webes és egy mobilos kliensből áll, valamint egy backendből és az általa használt adatbázisból. A webes kliens  React keretrendszerre épül, a mobilos kliens pedig natív Androidra készül. A backend a Laravel keretrendszerrel készül, az adatbázis pedig valamilyen SQL alapú relációs adatbázis lesz. A könyebb telepítés és futtatás érdekében Docker konténereket használunk.
+Az alkalmazás egy webes és egy mobilos kliensből áll, valamint egy backendből és az általa használt adatbázisból. A webes kliens  React keretrendszerre épül, a mobilos kliens pedig natív Androidra készül Jetpack Compose keretrendszerrel írt felhasználói felülettel. A backend a Laravel keretrendszerrel készül, az adatbázis pedig valamilyen SQL alapú relációs adatbázis lesz. A könyebb telepítés és futtatás érdekében Docker konténereket használunk.
