--- a/Specification/sections/description.tex
+++ b/Specification/sections/description.tex
@@ -26,7 +26,7 @@ A csapat tagjai:
     \end{tabular}
 \end{table}
 
-\subsection{Részletes feladatleírás}
+%\subsection{Részletes feladatleírás}
 
 %TODO
 
