--- a/writer-reader-android-client/app/src/main/res/values/strings.xml
+++ b/writer-reader-android-client/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">Writer-Reader-Client</string>
+    <string name="app_name">Writer Reader</string>
     <string name="button_label_login">Bejelentkezés</string>>
     <string name="button_label_register">Fiók létrehozása</string>
     <string name="textfield_label_username">Felhasználónév</string>
     <string name="textfield_label_password">Jelszó</string>
+    <string name="textfield_label_confirm_password">Jelszó megerősítése</string>
     <string name="textfield_label_email">E-mail cím</string>
+    <string name="checkbox_label_terms_and_conditions">Elfogadom az felhasználási feltételeket</string>
+
 
 </resources>
