--- a/writer-reader-android-client/app/src/main/res/values/strings.xml
+++ b/writer-reader-android-client/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name ="textfield_label_comment">Írj megjegyzést</string>
     <string name="button_read_work">Elolvasom</string>
     <string name="chapter_number">%d. fejezet</string>
+    <string name="work_details_title">Mű részletei</string>
 
 </resources>
