--- a/Specification/sections/description.tex
+++ b/Specification/sections/description.tex
@@ -26,13 +26,11 @@ A csapat tagjai:
     \end{tabular}
 \end{table}
 
-<<<<<<< HEAD
 %\subsection{Részletes feladatleírás}
 
 %TODO
 
-=======
->>>>>>> 54bc2e9c8d56daa703583417b2cbdc5ea831555a
 \subsection{Technikai paraméterek}
 
 Az alkalmazás egy webes és egy mobilos kliensből áll, valamint egy backendből és az általa használt adatbázisból. A webes kliens  React keretrendszerre épül, a mobilos kliens pedig natív Androidra készül Jetpack Compose keretrendszerrel írt felhasználói felülettel. A backend a Laravel keretrendszerrel készül, az adatbázis pedig valamilyen SQL alapú relációs adatbázis lesz. A könyebb telepítés és futtatás érdekében Docker konténereket használunk.
+Helo
