--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -50,9 +50,8 @@
 
 \include{sections/purpose-functions-envirement}
 
-\include{sections/implementation}
-
-    \include{sections/implementation-subsections/architecture}
+\input{sections/implementation}
+\input{sections/implementation-subsections/architecture}
 
 
 %--------------------------------------------------------------------------------------
