--- a/Documentation/sections/implementation.tex
+++ b/Documentation/sections/implementation.tex
@@ -2,3 +2,8 @@
 \label{sec:implementation}
 
 
+A szoftver három fő komponensből áll össze: a backend, a webes kliens és a mobil kliens.
+A hárokomponens klasszikus kliens-szerver architektúrát valósít meg: a backend a szerveroldali logikát, a webes és a mobilos kliens 
+felhasználói felületet.
+A backend és a kliensek közötti kommunikáció http protokollon keresztül történik, a backend REST API-t biztosít a kliensek számára.
+Az egyes komponensek fejlesztését, külön külön végeztük, így a fejlesztőcsapat tagjainak jól elkülönülő feladata és felelősségi körük volt.
