--- a/Documentation/sections/purpose-functions-envirement.tex
+++ b/Documentation/sections/purpose-functions-envirement.tex
@@ -44,4 +44,4 @@ A moderátorok a moderálási jogosultságokkal rendelkeznek, az adminisztrátor
 
 A mobil kliens platformspecifikus, android operációs rendszerre készült kotlin nyelven Android Studioban.
 A felhasználói felület normál méretű mobiltelefonra lett optimalizálva, egyéb méretű eszközökön (pl. okosórán) nem lett tesztelve.
-A mobil kliens használatához internetelérés szükséges, az alkalmazás elérje  a backend szolgáltatásokat. 
+A mobil kliens használatához internetelérés szükséges, hogy az alkalmazás elérje a backend szolgáltatásokat. 
