--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -52,6 +52,9 @@
 
 \input{sections/implementation}
 \input{sections/implementation-subsections/architecture}
+\input{sections/implementation-subsections/backend.tex}
+\input{sections/implementation-subsections/web-client.tex}
+\input{sections/implementation-subsections/mobile-client.tex}
 
 
 %--------------------------------------------------------------------------------------
