--- a/writer-reader-android-client/app/src/main/res/values/strings.xml
+++ b/writer-reader-android-client/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="characters">Karakterek</string>
     <string name="tags">Címkék</string>
     <string name="categories">Kategóriák</string>
-
+    <string name="number_of_chapters">Fejezetek száma:</string>"
+    <string name="author">Szerző</string>"
 </resources>
