Add missing documentation sections

--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -59,6 +59,10 @@
 
 \include{sections/implementation-subsections/mobile-client.tex}
 
+\include{sections/installation}
+\include{sections/softwares}
+\include{sections/summary}
+\include{sections/improvements}
 
 %--------------------------------------------------------------------------------------
 % Bibliográfia [Bibliography] - Ha üres kommenteld ki [Uncomment if empty]
