Add backend skeleton

--- a/Documentation/sections/implementation-subsections/architecture.tex
+++ b/Documentation/sections/implementation-subsections/architecture.tex
@@ -2,13 +2,14 @@
 
 A szoftver egészében és komponenseiben is rétzegzett architektúrát valósít mmeg.
 
---- Backend ----
-\\
+\subsubsection{Backend architektúra}
+
+A Laravel MVC architektúrájának kifejtése...., magas szintű kép
 
 
+\subsubsection{Mobilos kliens}
 
-
-\noindent A mobilos kliens 2 fő rétegre osztható:
+A mobilos kliens 2 fő rétegre osztható:
 
 \begin{itemize}
     \item  [1.] Adat réteg (Data Layer)
