--- a/Documentation/sections/implementation-subsections/mobile-client.tex
+++ b/Documentation/sections/implementation-subsections/mobile-client.tex
@@ -113,3 +113,10 @@ például hálózati kérések indítását.
 A ViewModel figyeli az Intent-eket, végrehajtja a szükséges műveleteket, és az új állapotot a View felé közvetíti.
 
 
+
+
+\subsubsection{Grafikus felhasználói felület}
+    
+
+
+
