--- a/Documentation/sections/installation.tex
+++ b/Documentation/sections/installation.tex
@@ -1,2 +1,15 @@
 \section{Telepítési lerírás}
 \label{sec:installation}
+
+
+\subsection{Android kliens telepítése}
+A projekt továbbfejlesztéséhez vagy szerkesztéséhez Android stúdió telepítése szükséges. 
+Az Android Studio letölthető a \url{https://developer.android.com/studio} címről. 
+Az android studió tartalmazza az Android SDK-t ami a kód fordításához szükséges. A kód fordításához szükséges minimális SDK verziószáma: 24.
+Az alkalmazás futtatásához szükséges egy Android eszköz vagy emulátor. 
+Emulátor szintén telepíthető az Android studióban.
+
+\par
+Ha kiadásra szánjuk az alkalmazást, akkor le kell fordítani a brojektet és APK filet kell generálni. 
+Az APK-t aláírással kell ellátni, majd feltölthető a Google Play áruházba. 
+Innen a felhasználók letölthetik és telepíthetik az alkalmazást.
