References for backend

--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -68,14 +68,14 @@
 % Bibliográfia [Bibliography] - Ha üres kommenteld ki [Uncomment if empty]
 %--------------------------------------------------------------------------------------
 
-%\newpage
-%\thispagestyle{empty}
-%\pagenumbering{gobble}
-%{
-%    \footnotesize  % Kisebb betűméret [Smaller font size]
-%    \bibliographystyle{plain}
-%    \bibliography{mybib}
-%}
-%\addcontentsline{toc}{section}{Hivatkozások}
+\newpage
+\thispagestyle{empty}
+\pagenumbering{gobble}
+{
+    \footnotesize  % Kisebb betűméret [Smaller font size]
+    \bibliographystyle{plain}
+    \bibliography{mybib}
+}
+\addcontentsline{toc}{section}{Hivatkozások}
 
 \end{document}
