--- a/Documentation/mybib.bib
+++ b/Documentation/mybib.bib
@@ -1,9 +1,32 @@
 % Referenced works
 
 % Example
-@misc{Wikipedia,
-  author       = {{Wikipedia contributors}},
-  howpublished = {\url{https://en.wikipedia.org/wiki/}},
-  organization = {Wikipedia},
-  title        = {Wikipedia}
-}
+@misc{LaravelDocs,
+  author       = {Laravel},
+  title        = {Laravel Documentation},
+  howpublished = {\url{https://laravel.com/docs/11.x}}
+},
+
+@misc{LaravelBreeze,
+  author       = {Laravel},
+  title        = {Laravel Breeze},
+  howpublished = {\url{https://laravel.com/docs/11.x/starter-kits#laravel-breeze}}
+},
+
+@misc{LaravelSanctum,
+  author       = {Laravel},
+  title        = {Laravel Sanctum},
+  howpublished = {\url{https://laravel.com/docs/11.x/sanctum}}
+},
+
+@misc{LaravelPermissions,
+  author       = {Spatie},
+  title        = {Laravel Permissions},
+  howpublished = {\url{https://spatie.be/docs/laravel-permission/v6/introduction}}
+},
+
+@misc{FilamentPHP,
+  author       = {Filament},
+  title        = {Filament},
+  howpublished = {\url{https://filamentphp.com/docs}}
+},
