--- a/Documentation/sections/purpose-functions-envirement.tex
+++ b/Documentation/sections/purpose-functions-envirement.tex
@@ -42,7 +42,7 @@ A moderátorok a moderálási jogosultságokkal rendelkeznek, az adminisztrátor
 
 \subsubsection{Backend}
 
-A backend a Laravel PHP keretrendszerrel készült, mely egy MVC (Model-View-Controller) architektúrát követ. A megvalósítás során a Laravel 11-es verzióját használtuk. A backend szolgáltatásokat REST API-n keresztül érhetik el a kliensek, így lazán csatoltak a rendszerek, könnyű bővíteni, karbantartani őket.
+A backend a Laravel PHP keretrendszerrel \cite{LaravelDocs} készült, mely egy MVC (Model-View-Controller) architektúrát követ. A megvalósítás során a Laravel 11-es verzióját használtuk. A backend szolgáltatásokat REST API-n keresztül érhetik el a kliensek, így lazán csatoltak a rendszerek, könnyű bővíteni, karbantartani őket.
 
 \subsubsection{Web kliens}
 
